objects/Onboarding_Program__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Duration_Type__c</fullName>
        <label>Duration Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hour(s)</fullName>
                </value>
                <value>
                    <fullName>Day(s)</fullName>
                </value>
                <value>
                    <fullName>Week(s)</fullName>
                </value>
                <value>
                    <fullName>Month(s)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Public__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Public</label>
        <type>Checkbox</type>
    </fields>
    <label>Onboarding Trail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Private_Onboarding_Programs</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Public__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Private Onboarding Programs</label>
    </listViews>
    <listViews>
        <fullName>All_public_Onboarding_Programs</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Public__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Public Onboarding Programs</label>
    </listViews>
    <nameField>
        <label>Trail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Onboarding Trails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>